        was used to insert the path to imported stylesheets.  This method
        is no longer used, and relative paths can be used instead.
        E.g. to override noramal_view.xslt from your product's 
        'transform/renderer/myrender.xslt', you can do:
        <xsl:import href="../../Silva/transform/renderer/normal_view.xslt" />

    Bugfixes ported from 2.0 branch

      - Fixed the factory function calls for File and Image, which
        still were still called with the spurious 'title' arguments on
        some code paths.

      - fixed WuW144: Images were not always shown correctly in kupu 
        when resized.

      - fixed 158381: Group objects should be removable even if the 
        groups service isn't installed.

      - fixed 158384: can't add groups: title error issue

      - fixed 157010: anchors in links: # -> %23

      - fixed wuw144: Incorrect caching of images. 
                      (was reverted in silva-2.0.3b1)

      - fixed 150809: sidebar cache not invalidated when folder
        removed

      - Adding Groups, Virtual Groups and IPGroups was broken.

      - creationdate is once again set on versioned content.

      - The lookup window allowed one to add content and assets to
        ghostfolders, which isn't really advisable. This is no longer
        possible.

      - Fixed the thumbnailing/caching bug. When a thumbnailed image
        was resized back to 100%, a copy was being made to make sure
        the modification date headers are newer. I changed this so
        only the modifcation date is updated, but no copy of the image
        is being made, instead the original image is used.

      - Removed extra <br/> tag when viewing codesources in kupu.

      - fix for bug 109008: wrong tooltip when hovering over version
        status link

      - importing a zexp file with the Silva root in there was
        failing, because a Zope 3 event got fired that tried to re-add